# sleepy

./: .env  .env.example  .gitignore  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  _utils.py  config.default.yaml  config.example.jsonc  config.example.yaml  config.json  config.old.json  config.py  config_json_update.md  data.example.jsonc  data.py  data.template.json  data.template.jsonc  data_by_ai.py  data_json_update.md  data_old.py  env.bat  env.py  env.sh  example.jsonc  flask_ext.pyi  install.sh  install_lib.bat  install_lib.sh  main.py  models.py  orm.py  panel.sh  passenger_wsgi.py  plugin.py  plugin_old.py  (+10 more)
_example/: cmd_console.py  页面标题上报脚本-1.0.user.js
client/: README.md  Sleepy.Powershell.ps1  autoxjs_device.js  autoxjs_device_offline_event_reporting.js  browser-script-2025.2.10.user.js  browser-script.user.js  cmd_console.py  cmd_console_muiti.py  cmd_console_multi.py  homework_device.py  linux_device.py  linux_device_hyprland.sh  linux_device_kde.py  mc_script.py  server_management.py  win-device-auto.vbs  win_device.py  win_device_autostart.vbs  zhixue.py  页面标题上报脚本-2024.12.2.user.js  页面标题上报脚本-2025.2.10.user.js
config/: config.example.toml  config.example.yaml
doc/: 20.49api.md  README.md  api.md  best_practice.md  config.md  config_json_update.md  config_update.md  data_json_example.md  deploy.md  env.md  https.md  plugin.md  server-config.md  update.md
example/: cmd_console.py
jsonc_parser/: .gitignore  README.md  parser.py
plugin/: __init__.py  example.py
plugin_old/: __init__.py
scripts/: README.md  install.ps1  install.sh  install_lib.bat  panel.sh
setting/: .gitignore  README.md  metrics_list.default.jsonc  metrics_list.json  status_list.default.jsonc  status_list.json
shell-scripts/: install.ps1  install.sh  install_lib.bat
(+175 files in other folders)
