[project]
name = "sleepy"
version = "5.0-dev-20250722"
description = "A Flask application to see if you're online or not."
license = { text = "MIT" }

[project.urls]
homepage = "https://sleepy.siiway.top"
repository = "https://github.com/sleepy-project/sleepy"

[tool.sleepy-plugin]
version = [5, 0, 0]
