[project]
name = "sleepy"
version = "5.0.0"
description = "A Flask application to see if you're online or not."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web server
    "flask>=3.1.1",
    # Config parsing
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    # Data storing
    "flask-sqlalchemy>=3.1.1",
    "objtyping>=0.5.4",
    # Timezone
    "pytz>=2025.2",
    # Colorful log
    "colorama>=0.4.6",
    # Scheduled tasks
    "schedule>=1.2.2",
]

[project.urls]
homepage = "https://sleepy.siiway.top"
documentation = "https://sleepy.siiway.top"
github = "https://github.com/sleepy-project/sleepy"
releasenotes = "https://github.com/sleepy-project/sleepy/releases"
issues = "https://github.com/sleepy-project/sleepy/issues"

[tool.sleepy-plugin]
version-num = [5, 0, 0]
version-str = "5.0-dev-20250724"
